web-infras/parser/tests/fixtures/babel/core/uncategorised/108/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,17)
1|var x = /[P QR]/\u0067
 |               ^
